[gd_scene load_steps=94 format=2]

[ext_resource path="res://Assets/Enemies/Demon/demon_slime_FREE_v1.0_288x160_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Escena/enemies/bossdemon.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34, 36 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 288, 160 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 288, 480, 288, 160 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 576, 480, 288, 160 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 864, 480, 288, 160 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1152, 480, 288, 160 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 288, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 576, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 864, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 1152, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 1440, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 1728, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 2016, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 2304, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 2592, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 2880, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 3168, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 3456, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 3744, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 4032, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 4320, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 4608, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 4896, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 5184, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 5472, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 5760, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 6048, 640, 288, 160 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 288, 160 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 288, 160 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 288, 160 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 288, 160 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 288, 160 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 1440, 0, 288, 160 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 288, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 576, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 864, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 1152, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 1440, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 1728, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 2016, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 2304, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 2592, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 2880, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 3168, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 3456, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 3744, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 4032, 320, 288, 160 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 288, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 576, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 864, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 1152, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 1440, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 1728, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 2016, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 2304, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 2592, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 2880, 160, 288, 160 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 3168, 160, 288, 160 )

[sub_resource type="SpriteFrames" id=62]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "damage_taken",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": false,
"name": "sword_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=63]
resource_name = "damage_taken"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "damage_taken" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=64]
resource_name = "death"
length = 2.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=65]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=66]
resource_name = "sword_attack"
length = 1.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "sword_attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/AttackArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:is_attacking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0.05, 1.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_timer"
} ]
}

[sub_resource type="Animation" id=67]
resource_name = "walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "damage_taken"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "sword_attack"

[sub_resource type="AnimationNodeAnimation" id=74]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachineTransition" id=78]

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=82]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=84]

[sub_resource type="AnimationNodeStateMachineTransition" id=86]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=87]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=88]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=89]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=92]

[sub_resource type="AnimationNodeStateMachineTransition" id=93]

[sub_resource type="AnimationNodeStateMachineTransition" id=94]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=95]

[sub_resource type="AnimationNodeStateMachine" id=90]
states/damage_taken/node = SubResource( 70 )
states/damage_taken/position = Vector2( 366, 50 )
states/death/node = SubResource( 71 )
states/death/position = Vector2( 372, 254 )
states/idle/node = SubResource( 72 )
states/idle/position = Vector2( 1286, 174 )
states/sword_attack/node = SubResource( 73 )
states/sword_attack/position = Vector2( 819, 50 )
states/walk/node = SubResource( 74 )
states/walk/position = Vector2( 829, 254 )
transitions = [ "idle", "death", SubResource( 75 ), "walk", "death", SubResource( 76 ), "idle", "damage_taken", SubResource( 78 ), "idle", "sword_attack", SubResource( 79 ), "idle", "walk", SubResource( 80 ), "sword_attack", "idle", SubResource( 82 ), "walk", "idle", SubResource( 84 ), "damage_taken", "idle", SubResource( 86 ), "damage_taken", "sword_attack", SubResource( 87 ), "damage_taken", "death", SubResource( 88 ), "sword_attack", "damage_taken", SubResource( 89 ), "walk", "sword_attack", SubResource( 92 ), "sword_attack", "death", SubResource( 93 ), "damage_taken", "walk", SubResource( 94 ), "walk", "damage_taken", SubResource( 95 ) ]
start_node = "idle"
end_node = "death"

[sub_resource type="AnimationNodeStateMachinePlayback" id=91]

[sub_resource type="CircleShape2D" id=68]
radius = 26.2488

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 240.5, 75.375 )

[node name="BossDemon" type="KinematicBody2D"]
position = Vector2( 0, 1 )
collision_layer = 5
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot"]
position = Vector2( 2, -31.5 )
scale = Vector2( 1, 0.99375 )
frames = SubResource( 62 )
animation = "idle"
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]
root_node = NodePath("../..")
anims/damage_taken = SubResource( 63 )
anims/death = SubResource( 64 )
anims/idle = SubResource( 65 )
anims/sword_attack = SubResource( 66 )
anims/walk = SubResource( 67 )

[node name="AnimationTree" type="AnimationTree" parent="Pivot"]
tree_root = SubResource( 90 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 91 )

[node name="AttackArea" type="Area2D" parent="Pivot"]
position = Vector2( -79, 25 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackArea"]
shape = SubResource( 68 )
disabled = true

[node name="ArcherDetectionArea" type="Area2D" parent="Pivot"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/ArcherDetectionArea"]
position = Vector2( 0.5, -23.625 )
shape = SubResource( 69 )

[node name="Time_to_attack" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Inmunity_time" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="body_entered" from="Pivot/ArcherDetectionArea" to="." method="_on_ArcherDetectionArea_body_entered"]
[connection signal="timeout" from="Time_to_attack" to="." method="_on_Time_to_attack_timeout"]
[connection signal="timeout" from="Inmunity_time" to="." method="_on_Inmunity_time_timeout"]
